# contextus

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py
app/cores/: __init__.py  config_core.py
app/documents/: SituacaoMatricula.csv
app/utils/: __init__.py  chat.py  dir.py  document_loader.py  pdf.py  pdf_processor.py  rag.py
app/vector_store/: chroma.sqlite3
docs/: CargosCarreira.csv  DadosGerais.csv  EficienciaAcademica.csv  EficienciaAcademicaDicionarioDados.csv  IndiceVerticalizacao.csv  OfertaVagasNoturnas.csv  PercentuaisLegais.csv  ProfessoresPorInstituicao.csv  RelacaoAlunoProfessorRAP.csv  RelacaoInscritosVagas.csv  ReservaVagas.csv  SituacaoMatricula.csv  SituacaoMatriculaDicionarioDados.csv  TaxaEvasao.csv  TaxaEvasaoDicionarioDados.csv  TaxaOcupacao.csv  TecnicosAdmNivel.csv  TitulacaoDocente.csv
