[project]
name = "tcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.1",
    "duckdb-engine>=0.17.0",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.1.6",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.56.0",
    "tabulate>=0.10.0",
    "torchvision>=0.26.0",
    "typing-extensions>=4.15.0",
]
