[project]
name = "tcc"
version = "1.0.0"
description = "Assistente virtual com IA (Text-to-SQL) para dados educacionais da Plataforma Nilo Peçanha do IFBA. TCC de Licenciatura em Computação – IFBA Campus Jacobina. Stack: Streamlit, LangChain, Groq e SQLite."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
]
