[project]
name = "tcc"
version = "1.0.0"
description = "Trabalho de Conclusão do Curso (TCC) de Licenciatura em Computação do Instituto Federal da Bahia (IFBA), Campus Jacobina."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
]
